@@ -1,5 +1,10 @@
 $Id$
 
+2015-05-05  Christian Franke  <franke@computer.org>
+
+	ataprint.cpp: Print ACS-3 device statistics DSN flags.
+	Print device statistics page numbers in hex.
+
 2015-05-02  Christian Franke  <franke@computer.org>
 
 	ataprint.cpp: Print Transport Type for PATA and PCIe.
